Fix text align at home page

--- a/css/style.css
+++ b/css/style.css
@@ -47,9 +47,7 @@ ul, ol {
 
 #links-list {
    list-style: none;
-   text-align: left;
    margin: 20px;
-   margin-left: 295px;
 }
 
 #links-list li {
